--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -8,9 +8,11 @@
 
 .nav-bar {
   width: 100%;
-  height: 50px;
   border-bottom: solid 1px #efefef;
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
 .home-body {
@@ -103,4 +105,28 @@
   font-size: 14px;
   padding: 16px;
   width: 100%;
+}
+
+.conversation {
+  margin-left: 0px;
+  padding: 20px 16px 16px;
+  position: relative;
+  cursor: pointer;
+}
+
+.conversation-address {
+  font-size: 16px;
+  margin: 4px 0px 0px;
+  color: black;
+}
+
+.conversation-snippet {
+  font-size: 14px;
+  line-height: 16px;
+  height: 16px;
+  margin: 4px 0px 0px;
+  color: rgba(0, 0, 0, 0.54);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
