--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -42,6 +42,7 @@
   overflow: scroll;
   padding: 20px;
   flex-grow: 1;
+  align-items: center;
 }
 
 .message {
@@ -67,6 +68,14 @@
   padding: 10px;
   border-radius: 20px;
   flex-grow: 1;
+}
+
+.messsage-image {
+  background: white;
+  border: solid 1px #cacaca;
+  padding: 4px;
+  border-radius: 8px;
+  color: black;
 }
 
 .message.message-received .message-text {
@@ -105,28 +114,4 @@
   font-size: 14px;
   padding: 16px;
   width: 100%;
-}
-
-.conversation {
-  margin-left: 0px;
-  padding: 20px 16px 16px;
-  position: relative;
-  cursor: pointer;
-}
-
-.conversation-address {
-  font-size: 16px;
-  margin: 4px 0px 0px;
-  color: black;
-}
-
-.conversation-snippet {
-  font-size: 14px;
-  line-height: 16px;
-  height: 16px;
-  margin: 4px 0px 0px;
-  color: rgba(0, 0, 0, 0.54);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
