--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -11,3 +11,17 @@
 .nav-bar-title {
   flex-grow: 1;
 }
+
+.nav-bar-right-side {
+  display: flex;
+  align-items: center;
+}
+
+.nav-bar-user-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 10px;
+  cursor: pointer;
+  border: solid 1px rgba(0, 0, 0, 0.3);
+}
